<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Activities.savedRunsActivity.SavedRunsItemViewActivity">

    <TextView
        android:id="@+id/recyclerTextViewRunTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/name"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/recyclerTextViewTime"
        app:layout_constraintTop_toBottomOf="@+id/recyclerTextViewDate"
        app:layout_constraintVertical_bias="0.011" />

    <TextView
        android:id="@+id/recyclerTextViewDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distance"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerTextViewSpeed"
        app:layout_constraintStart_toStartOf="@+id/viewRunTextViewDistanceValue" />

    <TextView
        android:id="@+id/recyclerTextViewTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerTextViewDistance"
        app:layout_constraintStart_toStartOf="@+id/viewRunTextViewTimeValue" />

    <TextView
        android:id="@+id/viewRunTextViewDistanceValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_km"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/viewRunTextViewSpeedValue"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/viewRunTextViewTimeValue"
        app:layout_constraintTop_toTopOf="@+id/viewRunTextViewSpeedValue" />

    <TextView
        android:id="@+id/viewRunTextViewTimeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_00_00"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/viewRunTextViewDistanceValue"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/viewRunTextViewDistanceValue" />

    <TextView
        android:id="@+id/viewRunTextViewSpeedValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="32dp"
        android:text="@string/_0_km_h"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/viewRunTextViewDistanceValue"
        app:layout_constraintTop_toBottomOf="@+id/recyclerTextViewSpeed"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/recyclerTextViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/date"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/recyclerTextViewRunTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/recyclerTextViewSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/average_speed"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/viewRunTextViewSpeedValue"
        app:layout_constraintTop_toBottomOf="@+id/recyclerTextViewRunTitle"
        app:layout_constraintVertical_bias="0.01" />

</androidx.constraintlayout.widget.ConstraintLayout>