<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.savedRunsActivity.viewSavedRunActivity.ViewSavedRunActivity">

    <TextView
        android:id="@+id/viewRunTextViewDistanceValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_km"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/viewRunTextViewSpeedValue"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/viewRunTextViewTimeValue"
        app:layout_constraintTop_toTopOf="@+id/viewRunTextViewSpeedValue" />

    <TextView
        android:id="@+id/viewRunTextViewSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="248dp"
        android:text="@string/average_speed"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/viewRunTextViewSpeedValue"
        app:layout_constraintTop_toBottomOf="@+id/viewRunTextViewRunTitle"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/viewRunTextViewTimeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_00_00"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/viewRunTextViewDistanceValue"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/viewRunTextViewDistanceValue" />

    <TextView
        android:id="@+id/viewRunTextViewRunTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/name"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/viewRunTextViewTime"
        app:layout_constraintTop_toBottomOf="@+id/viewRunTextViewDate"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/viewRunTextViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/viewRunTextViewRunTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053" />

    <TextView
        android:id="@+id/viewRunTextViewTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/viewRunTextViewDistance"
        app:layout_constraintStart_toStartOf="@+id/viewRunTextViewTimeValue" />

    <TextView
        android:id="@+id/viewRunTextViewSpeedValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/_0_km_h"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/viewRunTextViewDistanceValue"
        app:layout_constraintTop_toBottomOf="@+id/viewRunTextViewSpeed"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/viewRunTextViewDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distance"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/viewRunTextViewSpeed"
        app:layout_constraintStart_toStartOf="@+id/viewRunTextViewDistanceValue" />

    <fragment
        android:id="@+id/viewRun_mapFragment"
        android:name="com.nottingham.psydm7.cw2_runtracker.Activities.savedRunsActivity.viewSavedRunActivity.ViewSavedRunMapsFragment"
        android:layout_width="325dp"
        android:layout_height="295dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.363" />

    <Button
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Edit"
        app:layout_constraintBottom_toBottomOf="@+id/viewRunTextViewDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.929"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>